--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -117,7 +117,7 @@
             "name": "Python: PySpark",
             "type": "python",
             "request": "launch",
-            "stopOnEntry": true,
+            "stopOnEntry": false,
             "osx": {
                 "pythonPath": "${env:SPARK_HOME}/bin/spark-submit"
             },
@@ -139,7 +139,7 @@
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
-            "stopOnEntry": true,
+            "stopOnEntry": false,
             "pythonPath": "${config:python.pythonPath}",
             "module": "module.name",
             "cwd": "${workspaceFolder}",
@@ -153,7 +153,7 @@
             "name": "Python: Pyramid",
             "type": "python",
             "request": "launch",
-            "stopOnEntry": true,
+            "stopOnEntry": false,
             "pythonPath": "${config:python.pythonPath}",
             "cwd": "${workspaceFolder}",
             "env": {},
@@ -170,7 +170,7 @@
             "name": "Python: Watson",
             "type": "python",
             "request": "launch",
-            "stopOnEntry": true,
+            "stopOnEntry": false,
             "pythonPath": "${config:python.pythonPath}",
             "program": "${workspaceFolder}/console.py",
             "cwd": "${workspaceFolder}",
