--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         
+        
+        {
+                    "name": "Python",
+                    "type": "python",
+                    "request": "launch",
+                    "stopOnEntry": false,
+                    "pythonPath": "${config:python.pythonPath}",
+                    "program": "${file}",
+                    "cwd": "${workspaceRoot}",
+                    "env": {},
+                    "envFile": "${workspaceRoot}/.env",                
+                    "debugOptions": [
+                        "WaitOnAbnormalExit",
+                        "WaitOnNormalExit",
+                        "RedirectOutput"
+                    ]
+                   
+                },
         {
             "name": "Python: Current File",
             "type": "python",
